--- a/settings.json
+++ b/settings.json
@@ -3,12 +3,12 @@
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"AyaaBot", 
-"NomorOwner":"6282138919347", 
-"NamaOwner":"Helga Ilham", 
+"NamaBot":"Miyuki bot", 
+"NomorOwner":"628317436733", 
+"NamaOwner":"BLZXB5", 
 "Gopay" : "Qris",
-"Ovo" : "081398860278",
-"Dana" : "081398860278",
+"Ovo" : "08317436733",
+"Dana" : "08317436733",
 "LolKey": "DashBot",
 "HunterApi":"Ikyy69"
 }
